<resources>
    <string name="app_name">My App Portifolio</string>

    <string name="main_title">My Nanodegree Apps!</string>

    <!--Buttons-->
    <string name="btn_txt_popular_movies">Popular Movies</string>
    <string name="btn_txt_stock_hawk">Stock Hawk</string>
    <string name="btn_txt_build_it_bigger">Build it Bigger</string>
    <string name="btn_txt_make_your_app_material">Make Your App Material</string>
    <string name="btn_txt_go_ubiquitous">Go Ubiquitous</string>
    <string name="btn_txt_capstone">Capstone</string>

    <!--Mockup message-->
    <string name="mockup_message">This button will launch my %s app!</string>
</resources>
