<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.mynanodegree.erickson.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/ActivityMainSubtitle"
            android:text="@string/main_title" />

        <Button
            style="@style/ActivityMainButton"
            android:onClick="mockUpClick"
            android:text="@string/btn_txt_popular_movies" />

        <Button
            style="@style/ActivityMainButton"
            android:onClick="mockUpClick"
            android:text="@string/btn_txt_stock_hawk" />

        <Button
            style="@style/ActivityMainButton"
            android:onClick="mockUpClick"
            android:text="@string/btn_txt_build_it_bigger" />

        <Button
            style="@style/ActivityMainButton"
            android:onClick="mockUpClick"
            android:text="@string/btn_txt_make_your_app_material" />

        <Button
            style="@style/ActivityMainButton"
            android:onClick="mockUpClick"
            android:text="@string/btn_txt_go_ubiquitous" />

        <Button
            style="@style/ActivityMainButton"
            android:onClick="mockUpClick"
            android:text="@string/btn_txt_capstone" />

    </LinearLayout>

</LinearLayout>
